# shepherd

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
crates/agent/: Cargo.toml
crates/agent/examples/: seed.rs
crates/agent/src/: capture.rs  lib.rs  seed.rs
crates/agent/src/claude/: mod.rs  runner.rs  stream_parser.rs
crates/cli/: Cargo.toml
crates/cli/src/: attach.rs  bot.rs  main.rs  store.rs  tui.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  errors.rs  ids.rs  lib.rs  sandbox.rs  session.rs  workspace.rs
crates/providers/: Cargo.toml
crates/providers/examples/: daytona_prune.rs  daytona_smoke.rs  smoke.rs
crates/providers/src/: lib.rs
crates/providers/src/daytona/: mod.rs  provider.rs
crates/providers/src/docker/: mod.rs  provider.rs  tar.rs
docs/: daytona.md  mobile.md
images/base/: Dockerfile  build.sh
