[workspace]
resolver = "2"
members = ["crates/core", "crates/providers"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["Nimai Bhat"]
repository = "https://github.com/nimaibhat/shepherd"

[workspace.dependencies]
shepherd-core = { path = "crates/core" }
shepherd-providers = { path = "crates/providers" }
shepherd-agent = { path = "crates/agent" }

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
futures-util = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
bollard = "0.18"
tar = "0.4"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
strip = true
